Fix: software icons not showing, gradient on main pieces not showing

--- a/css/style.css
+++ b/css/style.css
@@ -239,7 +239,7 @@ header {
   .mainPieceContainer--gameProject {grid-template-columns: repeat(auto-fit, minmax(min(400px, 100%), 1fr));}
 }
 
-.mainPiece img {
+.mainPiece > img {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -255,7 +255,7 @@ header {
   display: block;
   position: absolute;
   background: linear-gradient(180deg, rgba(0, 0, 0, 0.9) 0%, rgba(0, 0, 0, 0) 50%);
-  z-index: auto;
+  z-index: 1;
 }
 
 .mainPiece:hover, .projectButton {
@@ -273,6 +273,7 @@ header {
   text-align: center;
   color: #ffffff;
   object-fit: fill;
+    z-index: 2;
   transition: all 2s ease;
 }
 
@@ -524,6 +525,7 @@ ul {
   right: 2%;
   display: flex;
   gap: 6px;
+
 }
 
 .software-overlay img {
